--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
+.main{
+  width: 100vw;
+  height: 100vh;
+  background-color:blanchedalmond;
+}
+.container{
+  width: 16em;
+  height: 340px;
+  background-color: khaki;
+  position: absolute;
+  padding: 1em 3em;
+  top: 50%;
+  left: 50%;
+  border-radius: 0.7rem;
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.9);
+  transform: translate(-50%, -50%);
+}
+
+h2{
+  text-align: center;
+  font-size: 25px;
+  margin-top: 1px;
+  color: rgb(6, 74, 127);
+}
+
+.success {
+  margin-bottom: 5px;
+  color:black;
+  background-color: cadetblue;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+  padding: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input, #submit{
+  border: none;
+  outline: none;
+  display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input{
+  width: 100%;
+  height: 15px;
+  background-color: transparent;
+  margin-bottom: 0.2em;
+  font-size: 20px;
+  padding: 1em 0 0.5em 0.5em;
+  border-bottom: 2px solid #202020;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.input:hover{
+  background-color: whitesmoke;
+}
+
+.error {
+  color: red;
+  
+  border: 1px solid #f5c6cb;
+  border-radius: 3px;
+  padding: 2px;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+#submit{
+  position: relative;
+  left: 0;
+  font-size: 1em;
+  width: 4em;
+  background-color: #096292;
   color: white;
+  padding: 0.5em 0;
+  margin-top: 1em;
+  border-radius: 0.3em;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#submit:hover{
+  background-color: rgb(255, 127, 140);
+  
 }
